--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "tsx src/index.ts",
-    "start": "node dist/index.js"
+    "crawl": "node dist/index.js",
+    "dev": "tsx src/index.ts"
   },
   "dependencies": {
     "chalk": "^5.3.0",
