--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "sitemap-crawl",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "CLI tool that crawls sitemap XML files and checks HTTP status of every URL",
   "type": "module",
   "bin": {
     "sitemap-crawl": "bin/sitemap-crawl.js"
   },
-  "files": ["dist", "bin"],
+  "files": [
+    "dist",
+    "bin"
+  ],
   "scripts": {
     "build": "tsc",
     "prepare": "pnpm run build",
@@ -18,21 +21,21 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "chalk": "^5.3.0",
+    "chalk": "^5.6.2",
     "cli-progress": "^3.12.0",
-    "commander": "^12.1.0",
-    "csv-stringify": "^6.5.0",
-    "dotenv": "^17.2.4",
-    "fast-xml-parser": "^4.4.0",
-    "p-limit": "^6.1.0",
-    "undici": "^6.21.0"
+    "commander": "^14.0.3",
+    "csv-stringify": "^6.6.0",
+    "dotenv": "^17.3.1",
+    "fast-xml-parser": "^5.3.7",
+    "p-limit": "^7.3.0",
+    "undici": "^7.22.0"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.6",
-    "@types/node": "^20.14.0",
+    "@types/node": "^25.3.0",
     "@vitest/coverage-v8": "^4.0.18",
-    "tsx": "^4.16.0",
-    "typescript": "^5.5.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
     "vitest": "^4.0.18"
   },
   "engines": {
@@ -44,5 +47,11 @@
     "type": "git",
     "url": "https://github.com/tdlm/sitemap-crawl.git"
   },
-  "keywords": ["sitemap", "crawler", "cli", "seo", "link-checker"]
+  "keywords": [
+    "sitemap",
+    "crawler",
+    "cli",
+    "seo",
+    "link-checker"
+  ]
 }
